--- a/index.html
+++ b/index.html
@@ -111,16 +111,29 @@
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
 
+
           <div class="resume-item d-flex flex-column flex-md-row mb-3">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Assistant researcher (fMRI data analysis)</h3>
-              <div class="subheading mb-3" style="white-space:pre-line;">Neurology Department – OVGU Hospital, Magdeburg, Germany.
-                  Neurocybernetics and Rehabilitation group.
-                  Dr. med. Catherine Sweeney-Reed.
+              <h3 class="mb-0">Neuroradiology Resident Doctor</h3>
+              <div class="subheading mb-3" style="white-space:pre-line;">Neuroradiology Department – Otto von Guericke University Hospital, Magdeburg, Germany.
               </div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">April 2017 – present</span>
+              <span class="text-primary">April 2019 – Present</span>
+            </div>
+          </div>
+
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-3">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Assistant researcher (fMRI data analysis)</h3>
+              <div class="subheading mb-3" style="white-space:pre-line;">Neurology Department – Otto von Guericke University Hospital, Magdeburg, Germany.
+                  Neurocybernetics and Rehabilitation group.
+                  Dr. Catherine Sweeney-Reed.
+              </div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">April 2017 – March 2019</span>
             </div>
           </div>
 
@@ -139,7 +152,7 @@
 
             <div class="resume-item d-flex flex-column flex-md-row mb-3">
                 <div class="resume-content mr-auto">
-                  <h3 class="mb-0">Research Student (EEG data analysis)</h3>
+                  <h3 class="mb-0">Research Intern (EEG data analysis)</h3>
                   <div class="subheading mb-3" style="white-space:pre-line;">Leibniz Institute for Neurobiology (LIN), Magdeburg, Germany.
                       Visual Attention & Perceptual Learning research group.
                       Prof. Dr. Jens-Max Hopf.
@@ -152,7 +165,7 @@
 
               <div class="resume-item d-flex flex-column flex-md-row mb-3">
                   <div class="resume-content mr-auto">
-                    <h3 class="mb-0">Research Student (Modeling neural networks)</h3>
+                    <h3 class="mb-0">Research Intern (Modeling neural networks)</h3>
                     <div class="subheading mb-3" style="white-space:pre-line;">German center for neurodegenerative diseases (DZNE), Magdeburg, Germany.
                         Cognitive Neurophysiology research group.
                         Dr. Motoharu Yoshida.
@@ -165,7 +178,7 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-3">
                     <div class="resume-content mr-auto">
-                      <h3 class="mb-0">Reseach Student (LFP data analysis)</h3>
+                      <h3 class="mb-0">Reseach Intern (LFP data analysis)</h3>
                       <div class="subheading mb-3" style="white-space:pre-line;">Leibniz Institute for Neurobiology (LIN), Magdeburg, Germany.
                           Department of systems physiology.
                           Dr. Max Happel.
