--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+            <a class="nav-link js-scroll-trigger" href="#experience">Work Experience</a>
           </li>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#internships">Interships</a>
+        </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
           </li>
@@ -128,7 +132,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-3">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Assistant researcher (fMRI data analysis)</h3>
+              <h3 class="mb-0">Reseach Assistant (fMRI data analysis)</h3>
               <div class="subheading mb-3" style="white-space:pre-line;">Neurology Department – Otto von Guericke University Hospital, Magdeburg, Germany.
                   Neurocybernetics and Rehabilitation group.
                   Dr. Catherine Sweeney-Reed.
@@ -139,57 +143,7 @@
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-3">
-              <div class="resume-content mr-auto">
-                <h3 class="mb-0">Master thesis student</h3>
-                <div class="subheading mb-3" style="white-space:pre-line;">Leibniz Institute for Neurobiology (LIN), Magdeburg, Germany.
-                    Department of Behavioral Neurology.
-                    Dr.-Ing. Christoph Reichert.
-                </div>
-              </div>
-              <div class="resume-date text-md-right">
-                <span class="text-primary">January 2018 – August 2018</span>
-              </div>
-            </div>
 
-            <div class="resume-item d-flex flex-column flex-md-row mb-3">
-                <div class="resume-content mr-auto">
-                  <h3 class="mb-0">Research Intern (EEG data analysis)</h3>
-                  <div class="subheading mb-3" style="white-space:pre-line;">Leibniz Institute for Neurobiology (LIN), Magdeburg, Germany.
-                      Visual Attention & Perceptual Learning research group.
-                      Prof. Dr. Jens-Max Hopf.
-                  </div>
-                </div>
-                <div class="resume-date text-md-right">
-                  <span class="text-primary">December 2017 – January 2018</span>
-                </div>
-              </div>
-
-              <div class="resume-item d-flex flex-column flex-md-row mb-3">
-                  <div class="resume-content mr-auto">
-                    <h3 class="mb-0">Research Intern (Modeling neural networks)</h3>
-                    <div class="subheading mb-3" style="white-space:pre-line;">German center for neurodegenerative diseases (DZNE), Magdeburg, Germany.
-                        Cognitive Neurophysiology research group.
-                        Dr. Motoharu Yoshida.
-                    </div>
-                  </div>
-                  <div class="resume-date text-md-right">
-                    <span class="text-primary">August 2016 – February 2017</span>
-                  </div>
-                </div>
-
-                <div class="resume-item d-flex flex-column flex-md-row mb-3">
-                    <div class="resume-content mr-auto">
-                      <h3 class="mb-0">Reseach Intern (LFP data analysis)</h3>
-                      <div class="subheading mb-3" style="white-space:pre-line;">Leibniz Institute for Neurobiology (LIN), Magdeburg, Germany.
-                          Department of systems physiology.
-                          Dr. Max Happel.
-                      </div>
-                    </div>
-                    <div class="resume-date text-md-right">
-                      <span class="text-primary">March 2016 – April 2016</span>
-                    </div>
-                  </div>
 
 
                   <div class="resume-item d-flex flex-column flex-md-row mb-3">
@@ -203,20 +157,87 @@
                       </div>
                     </div>
 
-                    <div class="resume-item d-flex flex-column flex-md-row mb-3">
-                        <div class="resume-content mr-auto">
-                          <h3 class="mb-0">Intern Doctor</h3>
-                          <div class="subheading mb-3" style="white-space:pre-line;">Mansoura University Hospitals, Egypt.
-                          </div>
-                        </div>
-                        <div class="resume-date text-md-right">
-                          <span class="text-primary">March 2014 – February 2015</span>
-                        </div>
-                      </div>                    
+                  
 
 
         </div>
 
+      </section>
+
+
+      <hr class="m-0">
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="internships">
+        <div class="my-auto">
+          <h2 class="mb-5">Internships</h2>
+          <div class="resume-item d-flex flex-column flex-md-row mb-3">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Master thesis student</h3>
+              <div class="subheading mb-3" style="white-space:pre-line;">Leibniz Institute for Neurobiology (LIN), Magdeburg, Germany.
+                  Department of Behavioral Neurology.
+                  Dr.-Ing. Christoph Reichert.
+              </div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">January 2018 – August 2018</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-3">
+              <div class="resume-content mr-auto">
+                <h3 class="mb-0">Research Intern (EEG data analysis)</h3>
+                <div class="subheading mb-3" style="white-space:pre-line;">Leibniz Institute for Neurobiology (LIN), Magdeburg, Germany.
+                    Visual Attention & Perceptual Learning research group.
+                    Prof. Dr. Jens-Max Hopf.
+                </div>
+              </div>
+              <div class="resume-date text-md-right">
+                <span class="text-primary">December 2017 – January 2018</span>
+              </div>
+            </div>
+
+            <div class="resume-item d-flex flex-column flex-md-row mb-3">
+                <div class="resume-content mr-auto">
+                  <h3 class="mb-0">Research Intern (Modeling neural networks)</h3>
+                  <div class="subheading mb-3" style="white-space:pre-line;">German center for neurodegenerative diseases (DZNE), Magdeburg, Germany.
+                      Cognitive Neurophysiology research group.
+                      Dr. Motoharu Yoshida.
+                  </div>
+                </div>
+                <div class="resume-date text-md-right">
+                  <span class="text-primary">August 2016 – February 2017</span>
+                </div>
+              </div>
+
+              <div class="resume-item d-flex flex-column flex-md-row mb-3">
+                  <div class="resume-content mr-auto">
+                    <h3 class="mb-0">Reseach Intern (LFP data analysis)</h3>
+                    <div class="subheading mb-3" style="white-space:pre-line;">Leibniz Institute for Neurobiology (LIN), Magdeburg, Germany.
+                        Department of systems physiology.
+                        Dr. Max Happel.
+                    </div>
+                  </div>
+                  <div class="resume-date text-md-right">
+                    <span class="text-primary">March 2016 – April 2016</span>
+                  </div>
+                </div>
+
+
+
+
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-3">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Intern Doctor</h3>
+              <div class="subheading mb-3" style="white-space:pre-line;">Mansoura University Hospitals, Egypt.
+              </div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">March 2014 – February 2015</span>
+            </div>
+          </div>  
+
+        </div>
       </section>
 
       <hr class="m-0">
