--- a/index.html
+++ b/index.html
@@ -128,6 +128,18 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-3">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0">PhD Student</h3>
+              <div class="subheading mb-3" style="white-space:pre-line;">Vinck Lab, Ernst Strüngmann Institute for Neuroscience in Cooperation with Max Planck Society, Frankfurt, Germany.
+              </div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">May 2020 – Present</span>
+            </div>
+          </div>
+
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-3">
+            <div class="resume-content mr-auto">
               <h3 class="mb-0">Neuroradiology Resident Doctor</h3>
               <div class="subheading mb-3" style="white-space:pre-line;">Neuroradiology Department – Otto von Guericke University Hospital, Magdeburg, Germany.
               </div>
@@ -187,7 +199,7 @@
               </div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">February 2020 – Present</span>
+              <span class="text-primary">February 2020 – April 2020</span>
             </div>
           </div>
 
@@ -284,7 +296,7 @@
              <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class= "mb-0">International Max Planck Research School for neural circuits, Frankfurt, Germany</h3>
-              <div class="subheading mb-3">PhD candidate</div>
+              <div class="subheading mb-3">PhD student</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">November 2019 - Present</span>
@@ -321,11 +333,17 @@
           <h2 class="mb-5">Further Qualifications</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Neuromatch Academy (Interactive Track)</h3>
+              <div class="subheading mb-3">An online school for Computational Neuroscience.</div>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row">
               <div class="resume-content mr-auto">
                 <h3 class="mb-0">International Startup School</h3>
                 <div class="subheading mb-3">Transfer- und Gründerzentrum (TUGZ), Otto von Gureicke University, Germany.</div>
               </div>
-
             </div>
   
             <div class="resume-item d-flex flex-column flex-md-row">
