--- a/index.html
+++ b/index.html
@@ -348,28 +348,28 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
               <div class="resume-content mr-auto">
-                <h3 class="mb-0">International Startup School</h3>
+                <h3 class="mb-0">International Startup School 2018</h3>
                 <div class="subheading mb-3">Transfer- und Gründerzentrum (TUGZ), Otto von Gureicke University, Germany.</div>
               </div>
             </div>
   
             <div class="resume-item d-flex flex-column flex-md-row">
               <div class="resume-content mr-auto">
-                <h3 class="mb-0">Business Planning Course</h3>
+                <h3 class="mb-0">Business Planning Course 2018</h3>
                 <div class="subheading mb-3">Chair of Entrepreneurship, Otto von Gureicke University, Germany.</div>
               </div>
             </div>
 
             <div class="resume-item d-flex flex-column flex-md-row">
                 <div class="resume-content mr-auto">
-                  <h3 class="mb-0">5<sup>th</sup> Human Brain Project winter school: Future Medicine</h3>
+                  <h3 class="mb-0">5<sup>th</sup> Human Brain Project winter school: Future Medicine 2017</h3>
                   <div class="subheading mb-0">Obegugl, Austria</div>
                   <p class="mb-3">Influencing clinical diagnoses and treatments by data mining analysis- and modeling-driven neuroscience.</p>
             </div>
           </div>
             <div class="resume-item d-flex flex-column flex-md-row">
                 <div class="resume-content mr-auto">
-                  <h3 class="mb-0">4<sup>th</sup> Human Brain Project summer school: Future Computing</h3>
+                  <h3 class="mb-0">4<sup>th</sup> Human Brain Project summer school: Future Computing 2017</h3>
                   <div class="subheading mb-0">Obegugl, Austria</div>
                   <p class="mb-3">Brain Science and Artificial Intelligence.</p>
             </div>
