--- a/index.html
+++ b/index.html
@@ -408,14 +408,14 @@
                   </div>
                   </div>
 
-              <div class="resume-item d-flex flex-column flex-md-row mb-5">
+<!--               <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
                   <h3 class="mb-0">Convolutional autoencoders for automatic LFP artifacts detection</h3>
                   <div class="mb-1">I am using convolutional deconvolutional autoencoders to detect artifacts in Local Field Potential data in a semisupervised automatic way.
                   </div>
                   <a href="http://artifacts-detection.ml/" role="button" class="btn btn-outline-info btn-sm">Demo</a>
                 </div>
-              </div>
+              </div> -->
 
               <div class="resume-item d-flex flex-column flex-md-row mb-5">
                   <div class="resume-content mr-auto">
