--- a/index.html
+++ b/index.html
@@ -394,6 +394,23 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
           <div class="my-auto">
             <h2 class="mb-5">Recent Projects</h2>
+
+            <div class="resume-item d-flex flex-column flex-md-row mb-5">
+              <div class="resume-content mr-auto">
+                <h3 class="mb-0">Diagnosing Epileptogenesis with Deep Anomaly Detection</h3>
+                <div class="mb-1">I am using deep learning models for classifying P300 ERP component in EEG data for BCI speller applications. 
+                  In addition to that, I am using different features visualization techniques e.g. saliency maps to extract the important spatial and temporal 
+                  features that drive the model and should reflect where attention originates in the brain and compare it to what we already know from the neuroscience literature.
+                </div>
+                <a href="https://doi.org/10.1016/j.clinph.2021.02.327" role="button" class="btn btn-outline-info btn-sm">Abstract</a>
+                <a href="https://static1.squarespace.com/static/59d5ac1780bd5ef9c396eda6/t/62e97661b4dffb7f5e539e1f/1659467365616/50+MLHC_2022.pdf" role="button" class="btn btn-outline-info btn-sm">Paper</a>
+                <a href="https://github.com/amr-farahat/Epileptogenesis" role="button" class="btn btn-outline-info btn-sm">Code</a>
+                <a href="https://www.youtube.com/watch?v=Z60nfNQQizI" role="button" class="btn btn-outline-info btn-sm">Video</a>
+              </div>
+              </div>
+
+
+
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
                   <h3 class="mb-0">Deep learning for EEG decoding and brain dynamics discovery</h3>
@@ -437,6 +454,8 @@
                     <a href="https://drive.google.com/file/d/1Q-sLUaqV7esy4qhRO0CP03MQ0JW6Gv2H/view?usp=sharing" role="button" class="btn btn-outline-info btn-sm">Poster 1</a>
                     <a href="http://bit.ly/neurorad555" role="button" class="btn btn-outline-info btn-sm">Poster 2</a>
                     <a href="https://www.youtube.com/watch?v=C4-bjGCcmNc" role="button" class="btn btn-outline-info btn-sm">Talk</a>
+                    <a href="https://doi.org/10.1002/hbm.25989" role="button" class="btn btn-outline-info btn-sm">Paper</a>
+                   
                   </div>
                 </div>
 
