--- a/index.html
+++ b/index.html
@@ -331,6 +331,20 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="qualifications">
         <div class="my-auto">
           <h2 class="mb-5">Further Qualifications</h2>
+
+            <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">The Machine Learning Summer School in Okinawa 2024</h3>
+              <div class="subheading mb-3">Okinawa, Japan</div>
+            </div>
+          </div>      
+          
+           <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">The Systems Vision Science Summer School & Symposium 2023</h3>
+              <div class="subheading mb-3">Tübingen, Germany</div>
+            </div>
+          </div>      
           
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
