--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                 <th scope="row" rowspan="1">Preprints</th>
 
                 <td>
-                  <b>Farahat, A.</b>, & Vinck, M. (2025). Neural responses in early, but not late, visual cortex are well predicted by random-weight CNNs with sufficient model complexity. bioRxiv, 2025-02. doi:<a href="https://doi.org/10.48550/arxiv.2212.06021">10.48550/ARXIV.2212.06021</a>
+                  <b>Farahat, A.</b>, & Vinck, M. (2025). Neural responses in early, but not late, visual cortex are well predicted by random-weight CNNs with sufficient model complexity. bioRxiv, 2025-02.
                 doi:<a href="https://doi.org/10.1101/2025.02.05.636721">10.1101/2025.02.05.636721</a>
                 </td>
 
